--- a/environment.yml
+++ b/environment.yml
@@ -1,28 +1,243 @@
-name: armas
+name: bagls-sh-project
 channels:
+  - nvidia
   - conda-forge
   - defaults
 dependencies:
-  - matplotlib
-  - numpy
-  - pandas
-  - ipykernel
-  - python=3.8.13
-  - scikit-learn
-  - seaborn
-  - pip
-  - scipy
-  - notebook
-  - tensorflow
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_gnu
+  - alsa-lib=1.2.3=h516909a_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py39h3811e60_1
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - bleach=4.1.0=pyhd8ed1ab_0
+  - ca-certificates=2022.9.24=ha878542_0
+  - certifi=2022.9.24=pyhd8ed1ab_0
+  - cffi=1.14.6=py39he32792d_0
+  - cuda-nvcc=11.8.89=0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dbus=1.13.6=h48d8840_2
+  - debugpy=1.5.1=py39he80948d_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - expat=2.4.2=h9c3ff4c_0
+  - flit-core=3.6.0=pyhd8ed1ab_0
+  - fontconfig=2.13.1=hba837de_1005
+  - freetype=2.10.4=h0708190_1
+  - gettext=0.19.8.1=h0b5b191_1005
+  - glib=2.68.4=h9c3ff4c_0
+  - glib-tools=2.68.4=h9c3ff4c_0
+  - gst-plugins-base=1.18.5=hf529b03_0
+  - gstreamer=1.18.5=h76c114f_0
+  - icu=68.2=h9c3ff4c_0
+  - importlib-metadata=4.10.0=py39hf3d152e_0
+  - importlib_resources=5.4.0=pyhd8ed1ab_0
+  - ipykernel=6.4.1=py39hef51801_0
+  - ipython=7.31.0=py39hf3d152e_0
+  - ipython_genutils=0.2.0=py_1
+  - jbig=2.1=h7f98852_2003
+  - jedi=0.18.1=py39hf3d152e_0
+  - jinja2=3.0.3=pyhd8ed1ab_0
+  - joblib=1.1.0=pyhd8ed1ab_0
+  - jpeg=9d=h36c2ea0_0
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter_client=7.1.0=pyhd8ed1ab_0
+  - jupyter_core=4.9.1=py39hf3d152e_1
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - kiwisolver=1.3.2=py39h1a9c180_1
+  - krb5=1.19.2=hcc1bbae_3
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
+  - libblas=3.9.0=12_linux64_openblas
+  - libcblas=3.9.0=12_linux64_openblas
+  - libclang=11.1.0=default_ha53f305_1
+  - libdeflate=1.8=h7f98852_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libevent=2.1.10=h9b69904_4
+  - libffi=3.3=h58526e2_2
+  - libgcc-ng=11.2.0=h1d223b6_11
+  - libgfortran-ng=11.2.0=h69a702a_11
+  - libgfortran5=11.2.0=h5c6108e_11
+  - libglib=2.68.4=h3e27bee_0
+  - libgomp=11.2.0=h1d223b6_11
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.9.0=12_linux64_openblas
+  - libllvm11=11.1.0=hf817b99_2
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.18=pthreads_h8fe5266_0
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.37=h21135ba_2
+  - libpq=13.5=hd57d9b9_1
+  - libsodium=1.0.18=h36c2ea0_1
+  - libstdcxx-ng=11.2.0=he4da1e4_11
+  - libtiff=4.3.0=h6f004c6_2
+  - libuuid=2.32.1=h7f98852_1000
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp-base=1.2.1=h7f98852_0
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.9.12=h72842e0_0
+  - libzlib=1.2.11=h36c2ea0_1013
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - markupsafe=2.0.1=py39h3811e60_1
+  - matplotlib=3.4.3=py39hf3d152e_2
+  - matplotlib-base=3.4.3=py39h2fa2bec_2
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py39h3811e60_1005
+  - mysql-common=8.0.27=ha770c72_3
+  - mysql-libs=8.0.27=hfa10184_3
+  - nbclient=0.5.10=pyhd8ed1ab_1
+  - nbconvert=6.4.0=py39hf3d152e_0
+  - nbformat=5.1.3=pyhd8ed1ab_0
+  - ncurses=6.2=h58526e2_4
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - notebook=6.4.4=pyha770c72_0
+  - nspr=4.32=h9c3ff4c_1
+  - nss=3.74=hb5efdd6_0
+  - olefile=0.46=pyh9f0ad1d_1
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=1.1.1o=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.2.5=py39hde0f152_0
+  - pandoc=2.17=h7f98852_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - patsy=0.5.2=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.4.0=py39ha612740_0
+  - pip=21.2.4=pyhd8ed1ab_0
+  - prometheus_client=0.12.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.24=pyha770c72_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.11.2=pyhd8ed1ab_0
+  - pyparsing=3.0.6=pyhd8ed1ab_0
+  - pyqt=5.12.3=py39hf3d152e_8
+  - pyqt-impl=5.12.3=py39hde8b62d_8
+  - pyqt5-sip=4.19.18=py39he80948d_8
+  - pyqtchart=5.12=py39h0fcd23e_8
+  - pyqtwebengine=5.12.1=py39h0fcd23e_8
+  - pyrsistent=0.18.0=py39h3811e60_0
+  - python=3.9.6=h49503c6_1_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pytz=2021.3=pyhd8ed1ab_0
+  - pyzmq=22.3.0=py39h37b5a0c_1
+  - qt=5.12.9=hda022c4_4
+  - readline=8.1=h46c0cb4_0
+  - scikit-learn=1.0.2=py39h4dfa638_0
+  - scipy=1.7.1=py39hee8e79c_0
+  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn-base=0.11.2=pyhd8ed1ab_0
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=59.8.0=py39hf3d152e_1
+  - sqlite=3.37.0=h9cd32fc_0
+  - statsmodels=0.13.1=py39hce5d2b2_0
+  - terminado=0.12.1=py39hf3d152e_1
+  - testpath=0.5.0=pyhd8ed1ab_0
+  - threadpoolctl=3.0.0=pyh8a188c0_0
+  - tk=8.6.11=h27826a3_1
+  - tornado=6.1=py39h3811e60_2
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - tzdata=2021e=he74cb21_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xz=5.2.5=h516909a_1
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zipp=3.7.0=pyhd8ed1ab_0
+  - zlib=1.2.11=h36c2ea0_1013
+  - zstd=1.5.1=ha95c52a_0
   - pip:
-    - jupyter-contrib-nbextensions
-    - ipywidgets
-    - scikit-image
-    - hydra
-    - hydra-joblib-launcher
-    - wandb
-    - omegaconf
-    - transformers
-    - torch
-    - timm
-    - librosa
+    - absl-py==0.15.0
+    - aiohttp==3.8.1
+    - aiosignal==1.2.0
+    - albumentations==1.3.0
+    - astunparse==1.6.3
+    - async-timeout==4.0.2
+    - cachetools==4.2.4
+    - charset-normalizer==2.0.10
+    - clang==5.0
+    - click==8.0.4
+    - datasets==2.0.0
+    - dill==0.3.4
+    - filelock==3.6.0
+    - flatbuffers==1.12
+    - frozenlist==1.3.0
+    - fsspec==2022.2.0
+    - gast==0.4.0
+    - git-lfs==1.6
+    - gitdb==4.0.9
+    - gitpython==3.1.29
+    - google-auth==1.35.0
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - googleapis-common-protos==1.54.0
+    - grpcio==1.43.0
+    - h5py==3.1.0
+    - idna==3.3
+    - imageio==2.13.5
+    - ipywidgets==7.6.5
+    - jupyter-contrib-core==0.3.3
+    - jupyter-contrib-nbextensions==0.5.1
+    - jupyter-highlight-selected-word==0.2.0
+    - jupyter-latex-envs==1.4.6
+    - jupyter-nbextensions-configurator==0.4.1
+    - jupyterlab-widgets==1.0.2
+    - keras==2.6.0
+    - keras-preprocessing==1.1.2
+    - lxml==4.7.1
+    - markdown==3.3.6
+    - multidict==6.0.2
+    - multiprocess==0.70.12.2
+    - numpy==1.19.5
+    - oauthlib==3.1.1
+    - opencv-python==4.5.5.62
+    - opencv-python-headless==4.6.0.66
+    - opt-einsum==3.3.0
+    - promise==2.3
+    - protobuf==3.19.3
+    - psutil==5.9.3
+    - pyarrow==7.0.0
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pywavelets==1.2.0
+    - pyyaml==6.0
+    - qudida==0.0.4
+    - regex==2022.3.15
+    - requests==2.27.1
+    - requests-oauthlib==1.3.0
+    - responses==0.18.0
+    - rsa==4.8
+    - scikit-image==0.18.3
+    - setproctitle==1.3.2
+    - six==1.15.0
+    - smmap==5.0.0
+    - tensorboard==2.6.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - tensorflow==2.6.0
+    - tensorflow-estimator==2.7.0
+    - tensorflow-metadata==1.6.0
+    - termcolor==1.1.0
+    - tfds-nightly==4.5.2.dev202202190044
+    - tifffile==2021.11.2
+    - toml==0.10.2
+    - tqdm==4.62.3
+    - typing-extensions==3.7.4.3
+    - urllib3==1.26.8
+    - werkzeug==2.0.2
+    - widgetsnbextension==3.5.2
+    - wrapt==1.12.1
+    - xxhash==3.0.0
+    - yarl==1.7.2
